<resources>
    <string name="app_name">Dogman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник собаковода</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="settings_text">Настройки</string>
    <string name="main_text_size">Размер главного текста</string>
    <string name="menu_slujeb">Служебные</string>
    <string name="menu_decor">Декоративные</string>
    <string name="menu_ohota">Охотничьи</string>
    <string name="menu_zdorov">Здоровье и питание</string>
    <string name="menu_inters">Интересное и полезное</string>
    <string name="ovcharka">
        <B>Овчарка</B> — общее название ряда пород пастушьих собак, изначально выведенных как помощники пастухов овец (овчаров) и другого скота.
        Немецкая овчарка — порода собак, изначально использовалась в качестве пастушьей и служебно-розыскной собаки.

Немецкая овчарка была получена в результате селекции и скрещивания некоторых разновидностей гуртовых собак Центральной и Южной Германии.
        Различают гладкошёрстную и длинношёрстную разновидности.
        <b>История породы и её происхождение</b> Определяется два основных центра происхождения, а именно на нынешней территории Скандинавии и Северо-Западной России.
        Существует мнение,
        что при формировании породы подмешивали крови индийского волка. Первый представитель немецкой овчарки, как породы был грязно-белого окраса. Кобель по кличке Грайф —
        был показан на выставке в Ганновере. Грайф был первым внесен в родословную книгу немецких овчарок.
        <b>Стандарт породы</b>
        Стандарт породы немецкая овчарка был впервые составлен Штефаницем и Майером в 1899 году. Первоначальный текст был дополнен на шестой ассамблее членов SV,
        происходившей 28 июля 1901 года, на 23-й ассамблее, состоявшейся 17 сентября 1909 года в Кёльне, на собрании Совета директоров и Консультативного комитета в
        Висбадене 5 сентября 1930 года и на заседании Комиссии по разведению и Совета директоров 25 марта 1961 года. Затем текст был пересмотрен Всемирным союзом
        обществ любителей немецкой овчарки (Weltunion der Vereine für Deutsche Schäferhunde WUSV) и принят на заседании WUSV 30 августа 1976 года. Ещё раз стандарт
        был переписан и реструктурирован 23—24 марта 1991 года. За исключением небольших изменений этот стандарт остается актуальным до сих пор.

Немецкая овчарка была выведена в конце XIX века. Своим официальным рождением порода обязана усилиям основателей Клуба (Ассоциации)
        любителей породы собак немецкая овчарка (Der Verein für Deutsche Schäferhunde), во главе которого стоял ротмистр Макс Эмиль Фредерик фон Штефаниц, по
        праву считающийся крестным отцом этой породы собак. Широта взглядов фон Штефаница позволила ему без всякой предвзятости оценивать различные типы овчарок,
        чтобы создать некий универсальный тип. В основу будущей породы лёг один-единственный принцип: «Немецкой овчаркой считается любая пастушья собака, обитающая
        в Германии, которая, благодаря постоянным тренировкам её качеств пастушьей собаки, достигает телесного и психического совершенства в рамках своей утилитарной функции».

Выведение породы, организованное и поставленное с национальным размахом, быстро прогрессировало благодаря объединённым усилиям немецких заводчиков пастушьих собак.
        В 1899 году немецкая овчарка впервые была официально показана на выставке собак.

В наше время немецкие овчарки участвуют в выставках, а также используются для охраны, занятий кинологическими видами спорта,
        а также как собаки для семьи. Немецкая овчарка универсальна. Она одинаково хорошо может служить собакой-компаньоном, охранной, защитной, сыскной, служебной и караульной собакой. Успешно используется в животноводстве как пастушья собака. Чаще других пород используется на службе в армии, в полиции, для охраны государственных границ. Хорошо выдрессированная немецкая овчарка незаменима при задержании преступника. Используется для сопровождения слепых. Прекрасно ладит с детьми. Однако, как и любая крупная собака нуждается в наблюдении и контроле при общении с детьми. Не стоит оставлять немецкую овчарку наедине с детьми, особенно с маленькими, во избежание травм и несчастных случаев
        .</string>
    <string name="hiler">
История Австралийского хилера начинается со знакомства европейских переселенцев с динго. Первые колонисты, прибывшие на
    континент, изучали диких собак, наблюдали за ними и пытались приручить. Иногда это получалось. Отнятые в раннем возрасте от матери щенки привязывались к владельцу,
    были хорошими охранниками и совсем не лаяли. Несмотря на эти достоинства хищники оставались хищниками. Они были непредсказуемыми и доставляли много хлопот.
    Тогда же начались первые эксперименты по скрещиванию динго с другими породами. В начале 19 века фермеры столкнулись с трудностями в перегоне скота на большие расстояния.
    За один перегон потери составляли до 200 голов. Было очевидно, что необходим четвероногий помощник, который бы мог сопровождать их в пути, обладал выносливостью, силой,
    мог защитить стадо от диких животных и при необходимости собрать потерявшихся в зарослях. Тогда же начали завозить различных пастушьих собак, в основном из рода колли,
    но они плохо приспосабливались к австралийской жаре и тяжело преодолевали расстояния. К тому же были слишком шумными. В 20-30-хх фермер из Южного Уэльса Томас Холл по
    совету своих родителей скрестил динго с короткошерстным голубым колли, которого импортировал в Австралию. В то время они были известны как уэльские колли. На протяжении
    30 лет он ни с кем не делился формулой успеха и пользовался своими собаками сам, их называли хилеры холла (halls hiller).
Источник: https://usatiki.ru/avstralijskij-hiler/
</string>
    <string name="pincher">
Немецкий пинчер – универсальная, послушная и довольно редкая порода. Такая собака может стать идеальным компаньоном и сторожем. В прошлом пинчеры славились способностью истреблять грызунов.

Пинчер может быть дружелюбным, нежным, милым. Но если того требует ситуация, пес превращается в строгого, даже агрессивного сторожа.
        Родина породы немецкий пинчер – Германия. Ее появление датируется восемнадцатым веком. Впервые представители породы были замечены в Вюртемберге, это город на юго-западе Германии.

Прямыми предками немецкого пинчера являются древние болотные собаки. Они были непревзойденными охотниками на мелких грызунов, в том числе крыс и мышей. Пинчеры полностью унаследовали этот охотничий инстинкт, они такие же заядлые охотники на мелкую дичь, как и их предки.
</string>
    <string name="akita">
Согласно сведениям из старинных исторических источников Японии, предком современных представителей породы является матаги-ину (матаги – этническая группа охотников, ину – «собака»). Регионом происхождения акита-ину считают префектуру Акита на острове Хонсю. Матаги-ину и ее предки служили людям незаменимыми помощниками в охоте, позволяя добывать даже очень крупных или ловких зверей: японских макак, медведей, кабанов.

Взрослая акита-ину
Взрослая акита-ину
В XII-XIII веках в Японии возникло новое популярное развлечение – собачьи бои. Оно стало жестоким отбором для этих собак, оставляя только самых сильных, злых и выносливых. В XIX веке по стране прокатилась волна индустриализации, многие жители переезжали, росло количество преступлений. Из-за этого матаги-ину были переучены для охраны имущества. В то же время из Европы в Японию привезли бульмастифов и мастифов, догов, возрождая традицию собачьих боев. Все чаще акиту скрещивали с этими собаками, чтобы получить более агрессивных и крупных псов.

Это вызвало беспокойство японских собаководов, ведь порода начала терять свои черты, поэтому в 1931 году акита-ину на государственном уровне были переведены в статус памятника природы. Заводчики активно занялись возрождением породы, отбирая только лучших ее представителей для разведения. В 1934 году был введен первый официальный стандарт, но со временем его пришлось скорректировать. Примерно в то же время порода получила свое современное название, а в 1967 году был открыт тематический музей.
</string>
    <string name="malamut">
Аля́скинский маламу́т (англ. Alaskan Malamute) — порода ездовых собак аборигенного типа, предназначенная для работы в упряжке, одна из древнейших пород собак[1]. Своим названием Аляскинский Маламут обязан племени Малемиутов (Малемуты, Малемьюты). Малемиуты — когда-то многочисленное эскимосское племя группы Инупиатов, жившее на различных прибрежных территориях Аляски. В исторических хрониках арктических путешественников это племя чаще всего встречается в районе Залива Коцебу и в районе Залива Нортон. Исследователи Севера Америки и Канады XIX века часто сообщали о замечательных качествах рабочих собак, приобретенных у этого племени, их исключительном здоровье, физической выносливости, устойчивости к самым экстремальным погодным условиям.[2] С 2010 года маламут является символом штата Аляска[3].
</string>
    <string name="buldog">
Бульдоги появились в Англии как специализированные собаки, предназначенные для травли быков — буль-бейтинга, варианта популярного с древних времён развлечения, наряду с травлей медведя, петушиными боями и т. п.


Французские бульдоги

Американский бульдог
Прародителем всех бульдогов считается староанглийский бульдог, ныне вымершая порода.</string>
    <string name="terjer">
Терье́ры (англ. terrier из фр. chien terrier — «норная собака», и фр. terrier — «нора, логово» (в современном языке означает также и породу собак) от фр. terre и лат. terra — «земля») — группа пород собак, предназначенных для охоты на норных животных и борьбы с грызунами.

Современные терьеры (около 30 пород) используются также как служебные (например, эрдельтерьер), охотничьи (фокстерьер, немецкий ягдтерьер) и декоративные (той-терьер)</string>
    <string name="griffon">
Породы признаны Международной кинологической федерацией и классифицированы в 3-ю секцию «Малые бельгийские собаки» 9-й группы «Декоративные и собаки-компаньоны». Стандарты утверждены в 2003 и 1998 годах, и различаются только типом и окрасом шерсти.

Маленькие, умные, живые, крепкие, коренастые, цельные, с щеголеватой осанкой и сложением собаки, привлекающие внимание своим почти человеческим выражением лица.</string>
    <string name="maltese">
Мальтийская болонка — это небольшая собака. Породу считают древней и историю её происхождения связывают с островом Мальта. Отличительной особенностью мальтийских болонок является чисто белый цвет окраса шерсти, хотя по стандартам Международной кинологической федерации допускается лёгкий оттенок слоновой кости. По данным той же федерации Мальтезе — это неспортивная собака древнего итальянского или, возможно, мальтийского происхождения. По сложению это маленькая собака, длина туловища которой примерно на 1/3 превышает высоту в холке.

По стандарту МКФ рост кобеля мальтезе в среднем варьируется от 21 см до 25 см, а рост суки от 20 до 23 см, вес взрослой особи находится в границах от 3 до 4 кг[1]. Интересен факт, что по стандарту Американского клуба собаководства, вес особи не должен превышать 3,2 кг, а предпочтительный — 1,8—2,7 кг[2].</string>
</resources>